<resources>
    <string name="app_name">Android Layout</string>
    <string name="title_activity_login_goride">Login Goride</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_ride">Welcome to Ride</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="shoppe_about">Shopping is an activity in which a customer browses the available goods or services presented by one or more retailers with the potential intent to purchase a suitable selection of them. A typology of shopper types has been developed by scholars which identifies one group of shoppers as recreational shoppers,[1] that is, those who enjoy shopping and view it as a leisure activity \n \n Online shopping has become a major disruptor in the retail industry[3] as consumers can now search for product information and place product orders across different regions. Online retailers deliver their products directly to the consumers\ home, offices, or wherever they want. \n\n  <b> If you need help or you have any questions, feel free to contact me by email.</b> </string>
    <string name="plan_1"><font color="#FFFFFF">₹599.00</font> \n 3 Months, Cancel Anytime</string>
    <string name="plan_2"><font color="#FFFFFF">₹1797.00</font> \n 6 months, one time.</string>
    <string name="plan_3"><font color="#FFFFFF">₹7,199.00</font> \n Yearly, cancel anytime.</string>
    <string name="pre_1">Free Shipping \n  On eligible orders</string>
    <string name="instagram_signup">Don\'t have an account? <font color="#FFFFFF">Sign Up</font></string>
</resources>